@@ -271,6 +271,7 @@ public class PollableSnmpInterface implements ReadyRunnable {
      *
      * @return a boolean.
      */
+    @Override
     public boolean isReady() {
         return true;
     }
@@ -278,6 +279,7 @@ public class PollableSnmpInterface implements ReadyRunnable {
     /**
      * <p>run</p>
      */
+    @Override
     public void run() {        
         if (getParent().polling()) {
             log().info("run: polling SNMP interfaces on package/interface " + getParent().getPackageName()+ "/" + getName() + "on primary address: " + getParent().getIpaddress());
@@ -319,7 +321,7 @@ public class PollableSnmpInterface implements ReadyRunnable {
                 log().debug("Working on interface with ifindex: " + miface.getIfindex());
                 log().debug("Interface PollStatus is " + miface.getStatus().getStatusName());
                 if (miface.getStatus().isUp()) {
-                    OnmsSnmpInterface iface = m_snmpinterfaces.get(new Integer(miface.getIfindex()));
+                    OnmsSnmpInterface iface = m_snmpinterfaces.get(Integer.valueOf(miface.getIfindex()));
 
                     log().debug("Previuos status Admin/Oper: " + iface.getIfAdminStatus() + "/" + iface.getIfOperStatus());
                     log().debug("Current status Admin/Oper: " + miface.getAdminstatus() + "/" + miface.getOperstatus());
@@ -359,8 +361,8 @@ public class PollableSnmpInterface implements ReadyRunnable {
                             sendOperUpEvent(iface);
                     }
 
-                    iface.setIfAdminStatus(new Integer(miface.getAdminstatus()));
-                    iface.setIfOperStatus(new Integer(miface.getOperstatus()));
+                    iface.setIfAdminStatus(Integer.valueOf(miface.getAdminstatus()));
+                    iface.setIfOperStatus(Integer.valueOf(miface.getOperstatus()));
                     iface.setLastSnmpPoll(now);
                                     
                     
