@@ -46,14 +46,6 @@ import org.springframework.util.Assert;
  *
  * @author <a href="mailto:weave@oculan.com">Brian Weaver </a>
  * @author <a href="mailto:tarus@opennms.org">Tarus Balog </a>
- * @author <a href="http://www.opennms.org/">OpenNMS </a>
- * @author <a href="mailto:weave@oculan.com">Brian Weaver </a>
- * @author <a href="mailto:tarus@opennms.org">Tarus Balog </a>
- * @author <a href="http://www.opennms.org/">OpenNMS </a>
- * @author <a href="mailto:weave@oculan.com">Brian Weaver </a>
- * @author <a href="mailto:tarus@opennms.org">Tarus Balog </a>
- * @author <a href="http://www.opennms.org/">OpenNMS </a>
- * @version $Id: $
  */
 public class JdbcTrapdIpMgr implements TrapdIpMgr, InitializingBean {
     private DataSource m_dataSource;
@@ -81,10 +73,12 @@ public class JdbcTrapdIpMgr implements TrapdIpMgr, InitializingBean {
     /**
      * <p>dataSourceSync</p>
      */
+    @Override
     public synchronized void dataSourceSync() {
         m_knownips.clear();
 
         new JdbcTemplate(m_dataSource).query(IP_LOAD_SQL, new RowCallbackHandler() {
+            @Override
             public void processRow(ResultSet rs) throws SQLException {
                 m_knownips.put(rs.getString(1), rs.getLong(2));
             }
@@ -95,6 +89,7 @@ public class JdbcTrapdIpMgr implements TrapdIpMgr, InitializingBean {
      * @see org.opennms.netmgt.trapd.TrapdIpMgr#getNodeId(java.lang.String)
      */
     /** {@inheritDoc} */
+    @Override
     public synchronized long getNodeId(String addr) {
         if (addr == null) {
             return -1;
@@ -106,18 +101,20 @@ public class JdbcTrapdIpMgr implements TrapdIpMgr, InitializingBean {
      * @see org.opennms.netmgt.trapd.TrapdIpMgr#setNodeId(java.lang.String, long)
      */
     /** {@inheritDoc} */
+    @Override
     public synchronized long setNodeId(String addr, long nodeid) {
         if (addr == null || nodeid == -1) {
             return -1;
         }
         
-        return longValue(m_knownips.put(addr, new Long(nodeid)));
+        return longValue(m_knownips.put(addr, Long.valueOf(nodeid)));
     }
 
     /* (non-Javadoc)
      * @see org.opennms.netmgt.trapd.TrapdIpMgr#removeNodeId(java.lang.String)
      */
     /** {@inheritDoc} */
+    @Override
     public synchronized long removeNodeId(String addr) {
         if (addr == null) {
             return -1;
@@ -131,6 +128,7 @@ public class JdbcTrapdIpMgr implements TrapdIpMgr, InitializingBean {
     /**
      * <p>clearKnownIpsMap</p>
      */
+    @Override
     public synchronized void clearKnownIpsMap() {
         m_knownips.clear();
     }
