@@ -53,10 +53,6 @@ import org.opennms.core.utils.WebSecurityUtils;
  *
  * @author <A HREF="mailto:jamesz@opennms.com">James Zuo </A>
  * @author <A HREF="http://www.opennms.org/">OpenNMS </A>
- * @author <A HREF="mailto:jamesz@opennms.com">James Zuo </A>
- * @author <A HREF="http://www.opennms.org/">OpenNMS </A>
- * @version $Id: $
- * @since 1.8.1
  */
 public class GetInterfacesServlet extends HttpServlet {
     private static final long serialVersionUID = 6768576652872631928L;
@@ -70,6 +66,7 @@ public class GetInterfacesServlet extends HttpServlet {
      *
      * @throws javax.servlet.ServletException if any.
      */
+    @Override
     public void init() throws ServletException {
         try {
             DataSourceFactory.init();
@@ -79,6 +76,7 @@ public class GetInterfacesServlet extends HttpServlet {
     }
 
     /** {@inheritDoc} */
+    @Override
     public void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
         int nodeId = -1;
         String nodeIdString = request.getParameter("node");
@@ -160,7 +158,7 @@ public class GetInterfacesServlet extends HttpServlet {
                     newInterface.addService(newService);
                 }
             }
-            userSession.setAttribute("lineItems.nodemanagement", new Integer(lineCount));
+            userSession.setAttribute("lineItems.nodemanagement", Integer.valueOf(lineCount));
         } finally {
             d.cleanUp();
         }
